tests/errors/test-error-006.slax
version 1.0;

match / {
    /*
      this is a comment that does not end
    <foo> {
        expr a + b;
    }
}